Add book list with covers

--- a/books.html
+++ b/books.html
@@ -19,8 +19,50 @@
     </nav>
   </header>
   <div class="container">
-<h2>Books Worth Reading</h2><p>Books that shaped my thinking — from data to design to curiosity.</p>
-							<p>Books that shaped my thinking — from data to design to curiosity.</p>
+    <h2>Books Worth Reading</h2>
+    <p>Books that shaped my thinking — from data to design to curiosity.</p>
+    <div class="books">
+      <div class="book">
+        <img src="https://via.placeholder.com/150x220?text=Sapiens" alt="Sapiens cover">
+        <p>Sapiens - Yuval Noah Harari</p>
+      </div>
+      <div class="book">
+        <img src="https://via.placeholder.com/150x220?text=Design+Things" alt="The Design of Everyday Things cover">
+        <p>The Design of Everyday Things - Don Norman</p>
+      </div>
+      <div class="book">
+        <img src="https://via.placeholder.com/150x220?text=Pragmatic+Programmer" alt="The Pragmatic Programmer cover">
+        <p>The Pragmatic Programmer - Hunt & Thomas</p>
+      </div>
+      <div class="book">
+        <img src="https://via.placeholder.com/150x220?text=Thinking+Fast+and+Slow" alt="Thinking, Fast and Slow cover">
+        <p>Thinking, Fast and Slow - Daniel Kahneman</p>
+      </div>
+      <div class="book">
+        <img src="https://via.placeholder.com/150x220?text=Clean+Code" alt="Clean Code cover">
+        <p>Clean Code - Robert C. Martin</p>
+      </div>
+      <div class="book">
+        <img src="https://via.placeholder.com/150x220?text=Deep+Work" alt="Deep Work cover">
+        <p>Deep Work - Cal Newport</p>
+      </div>
+      <div class="book">
+        <img src="https://via.placeholder.com/150x220?text=Lean+Startup" alt="The Lean Startup cover">
+        <p>The Lean Startup - Eric Ries</p>
+      </div>
+      <div class="book">
+        <img src="https://via.placeholder.com/150x220?text=Atomic+Habits" alt="Atomic Habits cover">
+        <p>Atomic Habits - James Clear</p>
+      </div>
+      <div class="book">
+        <img src="https://via.placeholder.com/150x220?text=Art+of+War" alt="The Art of War cover">
+        <p>The Art of War - Sun Tzu</p>
+      </div>
+      <div class="book">
+        <img src="https://via.placeholder.com/150x220?text=1984" alt="1984 cover">
+        <p>1984 - George Orwell</p>
+      </div>
+    </div>
   </div>
   <footer>
     <p>&copy; 2025 Your Name. Built with calm creativity.</p>
