--- a/about.html
+++ b/about.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css?v=4" />
 </head>
 <body>
-  <header>
-    <nav>
-      <a href="index.html">Home</a>
+  <header class="site-header">
+    <nav class="container nav">
+        <a href="index.html">Home</a>
       <a href="about.html">About Me</a>
-      <a href="projects.html">Projects</a>
-      <a href="open-lab.html">Open Lab</a>
+	  <a href="Git.html">Code</a>
+      <a href="woodworking.html">Woodworking</a>
+      <a href="foraging.html">Foraging</a>
       <a href="playlists.html">Playlists</a>
       <a href="books.html">Books</a>
-      <a href="contact.html">Contact</a>
+      <a href="contact.html" aria-current="page">Contact</a>
     </nav>
   </header>
-  <div class="container">
-<h2>About Me</h2><p>I find patterns, tell stories, and build data-driven futures.</p>
-  </div>
-  <footer>
-    <p>&copy; 2025 Your Name. Built with calm creativity.</p>
+
+  <main class="container">
+    <h2>About Me</h2>
+    <p>I find patterns, tell stories, and build data-driven futures.</p>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container">&copy; 2025 Augusto Liberti. Built with calm creativity.</div>
   </footer>
 </body>
 </html>
