--- a/contact.html
+++ b/contact.html
@@ -1,28 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css?v=4" />
 </head>
 <body>
-  <header>
-    <nav>
+  <header class="site-header">
+    <nav class="container nav">
       <a href="index.html">Home</a>
       <a href="about.html">About Me</a>
-      <a href="projects.html">Projects</a>
-      <a href="open-lab.html">Open Lab</a>
+	  <a href="Git.html">Code</a>
+      <a href="woodworking.html">Woodworking</a>
+      <a href="foraging.html">Foraging</a>
       <a href="playlists.html">Playlists</a>
       <a href="books.html">Books</a>
-      <a href="contact.html">Contact</a>
+      <a href="contact.html" aria-current="page">Contact</a>
     </nav>
   </header>
-  <div class="container">
-<h2>Get In Touch</h2><p>Want to collaborate or chat? Reach out — I’d love to hear from you.</p>
-  </div>
-  <footer>
-    <p>&copy; 2025 Your Name. Built with calm creativity.</p>
+
+  <main class="container">
+    <h2>Get In Touch</h2>
+    <p class="muted">Want to collaborate or chat? Reach out — I’d love to hear from you.</p>
+
+    <form class="card" action="#" method="post">
+      <label for="name">Name</label>
+      <input id="name" name="name" type="text" placeholder="Your name" required />
+
+      <label for="email">Email</label>
+      <input id="email" name="email" type="email" placeholder="you@example.com" required />
+
+      <label for="message">Message</label>
+      <textarea id="message" name="message" rows="5" placeholder="Tell me about your project..."></textarea>
+
+      <button class="button button--primary" type="submit">Send</button>
+    </form>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container">&copy; 2025 Augusto Liberti. Built with calm creativity.</div>
   </footer>
 </body>
 </html>
