--- a/Git.html
+++ b/Git.html
@@ -25,7 +25,7 @@
   data shapes meaning <br />
   and meaning drives action </h2> </head>
   <p> The right structure doesn’t just hold data together; it transforms it into a living story that moves people to act. </p>
-  
+  <p>I find patterns, tell stories, and build data-driven futures.</p>
     <h2>GitHub at a glance</h2>
 
     <section class="grid auto-300">
