--- a/foraging.html
+++ b/foraging.html
@@ -25,10 +25,10 @@
     <p class="muted">Wood wood wood</p>
 
     <div class="grid auto-150">
-      <img src="images\foraging\IMG_0478.jpeg" alt="Project thumbnail" class="thumbnail" onclick="enlarge(this.src)" />
-      <img src="images\foraging\IMG_2549.jpeg" alt="Project thumbnail" class="thumbnail" onclick="enlarge(this.src)" />
-	  <img src="images\foraging\IMG_0021.jpeg" alt="Project thumbnail" class="thumbnail" onclick="enlarge(this.src)" />
-	  <img src="images\foraging\IMG_0020.jpeg" alt="Project thumbnail" class="thumbnail" onclick="enlarge(this.src)" />
+      <img src="images/foraging/IMG_0478.jpeg" alt="Project thumbnail" class="thumbnail" onclick="enlarge(this.src)" />
+      <img src="images/foraging/IMG_2549.jpeg" alt="Project thumbnail" class="thumbnail" onclick="enlarge(this.src)" />
+	  <img src="images/foraging/IMG_0021.jpeg" alt="Project thumbnail" class="thumbnail" onclick="enlarge(this.src)" />
+	  <img src="images/foraging/IMG_0020.jpeg" alt="Project thumbnail" class="thumbnail" onclick="enlarge(this.src)" />
     </div>
 
     <div class="overlay" id="imgOverlay" onclick="closeOverlay()">
